2008-08-26  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/pcapparse/gstpcapparse.c: (gst_pcap_parse_class_init):
	Remove unused code and fix includes.

2008-08-25  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/gstdeinterlace2.c:
	(gst_deinterlace_method_class_init):
	* gst/deinterlace2/gstdeinterlace2.h:
	* gst/deinterlace2/tvtime/tomsmocomp.c:
	(gst_deinterlace_method_tomsmocomp_class_init):
	* gst/deinterlace2/tvtime/tomsmocomp/SearchLoopBottom.inc:
	* gst/deinterlace2/tvtime/tomsmocomp/SearchLoopTop.inc:
	* gst/deinterlace2/tvtime/tomsmocomp/StrangeBob.inc:
	* gst/deinterlace2/tvtime/tomsmocomp/TomsMoCompAll.inc:
	* gst/deinterlace2/tvtime/tomsmocomp/TomsMoCompAll2.inc:
	* gst/deinterlace2/tvtime/tomsmocomp/WierdBob.inc:
	* gst/deinterlace2/tvtime/tomsmocomp/tomsmocompmacros.h:
	First part of the C implementation of the tomsmocomp deinterlacing
	algorithm. This only supports search-effort=0 currently, is painfully
	slow and needs some cleanup later when all search-effort settings
	are implemented in C.

2008-08-24  Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	* configure.ac:
	* sys/Makefile.am:
	* sys/winks/Makefile.am:
	* sys/winks/gstksclock.c:
	* sys/winks/gstksclock.h:
	* sys/winks/gstksvideodevice.c:
	* sys/winks/gstksvideodevice.h:
	* sys/winks/gstksvideosrc.c:
	* sys/winks/gstksvideosrc.h:
	* sys/winks/kshelpers.c:
	* sys/winks/kshelpers.h:
	* sys/winks/ksvideohelpers.c:
	* sys/winks/ksvideohelpers.h:
	  New plugin for low-latency video capture on Windows (#519935).

	  Uses Kernel Streaming, the lowest level API for doing video capture
	  on Windows (more or less just raw ioctls).

2008-08-24  Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	* gst/pcapparse/gstpcapparse.c:
	* sys/winscreencap/gstdx9screencapsrc.c:
	* sys/winscreencap/gstgdiscreencapsrc.c:
	  Added documentation blobs. Thanks to Stefan for noticing!

2008-08-24  Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>
